--- a/about.html
+++ b/about.html
@@ -13,9 +13,6 @@
         <nav class="navbar">
           <a href="index.html"><h1>ANDREA</h1></a>
           <ul class="navlist">
-            <li>
-              <a href="index.html"><span class="home">HOME</span></a>
-            </li>
             <li><a href="about.html">ABOUT</a></li>
           </ul>
           <div class="hamburger">
@@ -26,7 +23,7 @@
         </nav>
       </header>
 
-      <section class="main">
+      <section class="main1">
         <div class="hero-container">
           <div class="hero-text">
             website na may laman na mga kanta malamang
