--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div class="songwcontrol">
           <div class="song-card">
             <img src="pic/forj.jpg" alt="" />
-            <p class="title">hotel</p>
-            <p class="singer">Claire Rosinkranz</p>
+            <p class="title">for j</p>
+            <p class="singer">Markus</p>
           </div>
           <div class="audio-control">
             <audio class="controls" controls>
@@ -97,7 +97,7 @@
           <div class="song-card">
             <img src="pic/tlo.jpg" alt="" />
             <p class="title">the lucky one (taylor's version)</p>
-            <p class="singer">Claire Rosinkranz</p>
+            <p class="singer">Taylor Swift</p>
           </div>
           <div class="audio-control">
             <audio class="controls" controls>
