--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="whole">
+    <section class="whole" id="whole">
       <header>
         <nav class="navbar">
-          <a href="index.html"><h1>ANDREA</h1></a>
+          <a href="index.html">
+            <h1>ANDREA</h1>
+            <img src="pic/cat1.gif" alt=""
+          /></a>
           <ul class="navlist">
             <li>
               <a href=""><span class="home">HOME</span></a>
             </li>
             <li><a href="about.html">ABOUT</a></li>
-            <li><a href="#songs">SONGS</a></li>
+            <li><a class="songs-toggle" href="#none">SONGS</a></li>
           </ul>
           <div class="hamburger">
             <span class="bar"></span>
@@ -33,17 +36,19 @@
             Hi gumawa ako ng simple website para sayo kasi boring XD...
           </div>
           <div class="sub-text">baguhan lang</div>
-          <a href="#songs"><button class="OK">OKAY</button></a>
+          <a href="#none"><button class="OK">OKAY</button></a>
         </div>
       </section>
 
-      <div class="quote">
+      <div id="none" class="none"></div>
+      <div id="quote" class="quote">
         "Insert quote kunyari may meaning pangpadagdag lang"
       </div>
+
       <section id="songs" class="songs">
         <div class="songwcontrol">
           <div class="song-card">
-            <img src="pic/nswy.jpg" alt="" />
+            <img onclick="blur();" id="img" src="pic/nswy.jpg" alt="" />
             <p class="title">no song without you</p>
             <p class="singer">HONNE</p>
           </div>
@@ -122,6 +127,7 @@
     </section>
     <footer class="footer">
       <p>&lt&gt &nbspmade by l&nbsp&lt/&gt</p>
+      <img src="pic/cat.gif" />
     </footer>
 
     <script src="script.js"></script>
