--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
       <header>
         <nav class="navbar">
           <a href="index.html">
-            <h1>ANDREA</h1>
-            <img src="pic/cat1.gif" alt=""
-          /></a>
+            <h1>ANDREA</h1></a>
           <ul class="navlist">
             <li>
               <a href=""><span class="home">HOME</span></a>
